--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,17 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
 
+server.servlet.session.timeout=15m
+
+# Cookie settings ??? ????????????
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.name=JSESSIONID
+server.servlet.session.cookie.max-age=900
+
+# Tracking ????? ??? ??????
+server.servlet.session.tracking-modes=cookie
+
 # === Thymeleaf ===
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
